ajustes de apariencia
Co-authored-by: AlejandroVegaL <1630082@upv.edu.mx>
Co-authored-by: Jessi1416 <1630096@upv.edu.mx>
Co-authored-by: EmanuelGD98 <1630353@upv.edu.mx>

--- a/inicio.html
+++ b/inicio.html
@@ -42,9 +42,9 @@
         <div class="hero-container">
             <a href="index.html"><img src="assets/img/controlMesa de trabajo 1@2x-8.png" style="width:100px;"></a>
             <h1 data-aos="zoom-in">Welcome To Gaming Center</h1>
-            <!-- <h2 data-aos="fade-up">siempre hay una recompenza más allá del game over</h2> -->
             <h1 data-aos="zoom-in">#QUÉDATEENCASA</h1>
-            <h2 data-aos="fade-up">Ya nos visitarás cuando pase la tormenta.</h2>
+            <h2 data-aos="fade-up">Ya nos visitaras cuando pase la tormenta.</h2>
+            <h2 data-aos="fade-up">siempre hay una recompenza más allá del game over</h2>
             <a data-aos="fade-up" href="#about" class="btn-get-started scrollto">Empecemos</a>
         </div>
     </section>
@@ -103,13 +103,13 @@
 
                 <div class="row">
                     <div class="col-lg-6" data-aos="fade-right">
-                        <div class="image" >
+                        <div class="image">
                             <img src="\assets\img\8d8e1e88-eb00-46df-a7f3-d3084e03cea4.jpg">
                         </div>
                     </div>
                     <div class="col-lg-6" data-aos="fade-left">
                         <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-                            <h3>¡El entretenimiento que tú necesitas!</h3>
+                            <h3>El centro de entretenimiento que necesitas explotar tu potencial.</h3>
                             <p class="font-italic">
                                 Consolas de ultima generación, los videojuegos mas competitivos e instructores con amplio conocimiento del mundo competitivo del gaming es lo que te espera si te unes a nosotros.
                                 <h4>Contamos con:</h4>
@@ -139,8 +139,8 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>Servicios</h2>
-                    <p></p>
+                    <h2>Services</h2>
+                    <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
                 </div>
 
                 <div class="row">
@@ -219,7 +219,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>Equipo</h2>
+                    <h2>Team</h2>
                     <p>El personal mejor preparado para atenderte y prepararte como los grandes</p>
                 </div>
 
@@ -237,9 +237,9 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Jessica Gamez</h4>
-                                <span>DJ Gamer</span>
-                                <p>Mandaditos expres, pongo la musica en el discord.</p>
+                                <h4>Jessi Gamez</h4>
+                                <span>Chief Executive Officer</span>
+                                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis</p>
                             </div>
                         </div>
                     </div>
@@ -257,32 +257,11 @@
                             </div>
                             <div class="member-info">
                                 <h4>Emanuel Galvan</h4>
-                                <span>Motivacion</span>
-                                <p>Internet chido, la envidia del equipo.</p>
+                                <span>Product Manager</span>
+                                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque</p>
                             </div>
                         </div>
                     </div>
-
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                        <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                            <div class="member-img">
-                                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="icofont-twitter"></i></a>
-                                    <a href=""><i class="icofont-facebook"></i></a>
-                                    <a href=""><i class="icofont-instagram"></i></a>
-                                    <a href=""><i class="icofont-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info">
-                                <h4>Arratia Zapata</h4>
-                                <span>Proyect Manager</span>
-                                <p>Bien infame pal js trae todo menos sueño, asecrean tambien duerme.</p>
-                            </div>
-                        </div>
-                    </div>
-
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="zoom-in" data-aos-delay="200">
@@ -297,8 +276,8 @@
                             </div>
                             <div class="member-info">
                                 <h4>Alejandro Vega</h4>
-                                <span>Cocas virtuales</span>
-                                <p>Su mamá lo regaño mientras trabajabamos pray for him F</p>
+                                <span>Comida</span>
+                                <p>Encargado de preparar las botanas y comida ráapida para el consumo y satisfacción de nuestros clientes más exigentes.</p>
                             </div>
                         </div>
                     </div>
@@ -315,7 +294,7 @@
 
                 <div class="section-title" data-aos="fade-up">
                     <h2>Tarifas</h2>
-                    <p>¡Tú diversion no tiene precio!</p>
+                    <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
                 </div>
 
                 <div class="row">
@@ -348,7 +327,7 @@
                                 <li>Pc Gamer</li>
                             </ul>
                             <div class="btn-wrap">
-                                <a href="#" class="btn-buy">Comprar ahora</a>
+                                <a href="#" class="btn-buy">Buy Now</a>
                             </div>
                         </div>
                     </div>
@@ -386,7 +365,7 @@
                 <ul class="faq-list">
 
                     <li data-aos="fade-up">
-                        <a data-toggle="collapse" class="collapsed" href="#faq1">¿Disponibilidad? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+                        <a data-toggle="collapse" class="collapsed" href="#faq1">Que días abren? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                         <div id="faq1" class="collapse" data-parent=".faq-list">
                             <p>
                                 Abrimos todos los días de la semana de 12:00 PM a 20:00 PM
@@ -395,25 +374,25 @@
                     </li>
 
                     <li data-aos="fade-up" data-aos-delay="100">
-                        <a data-toggle="collapse" href="#faq2" class="collapsed">¿Es seguro llevar niños pequeños? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+                        <a data-toggle="collapse" href="#faq2" class="collapsed">Es seguro llevar a mis hijos pequeños? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                         <div id="faq2" class="collapse" data-parent=".faq-list">
                             <p>
-                               Contamos con un área libre de peligros físicos además de proporionar a los peques videojuegos acorde a su de edad.
+                                El local está libre de peligros físicos y además a los iños siempre se le proporionan videojuegos acorde a su restricción de edad.
                             </p>
                         </div>
                     </li>
 
                     <li data-aos="fade-up" data-aos-delay="200">
-                        <a data-toggle="collapse" href="#faq3" class="collapsed">¿Qué es el sistema de lealtad? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+                        <a data-toggle="collapse" href="#faq3" class="collapsed">Que es el sistema de lealtad? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                         <div id="faq3" class="collapse" data-parent=".faq-list">
                             <p>
-                                Es un programa de recompensas el cuál con cada compra que realices se te reembolsa un porcentaje de lo gastado en monedas virtuales las cuales pueden ser canjeadas por horas de juego, comideda del menú e incluso inscripciones totalmente gratuitas a torneos.
+                                Es un programa de recompensas el cuál con cada compra que tu hagas se te reembolsa un porcentaje de lo gastado en monedas virtuales las cuales pueden ser canjeadas por horas de juego, comideda del menú e incluso inscripciones totalmente gratuitas a torneos.
                             </p>
                         </div>
                     </li>
 
                     <li data-aos="fade-up" data-aos-delay="300">
-                        <a data-toggle="collapse" href="#faq4" class="collapsed"> ¿Con que frecuencia realizan torneos? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+                        <a data-toggle="collapse" href="#faq4" class="collapsed">Cada cuanto hacen torneos? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                         <div id="faq4" class="collapse" data-parent=".faq-list">
                             <p>
                                 Se trata de hacer un torneo cada semana de un videojuego diferente cada vez, por lo que se te recomienda estár al pendiente de nuestras redes sociales para que te enteres de los que mas te interesan.
@@ -422,10 +401,10 @@
                     </li>
 
                     <li data-aos="fade-up" data-aos-delay="400">
-                        <a data-toggle="collapse" href="#faq5" class="collapsed">¿Cúanto cuesta la membrecía? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+                        <a data-toggle="collapse" href="#faq5" class="collapsed">Cuanto cuesta la membrecía? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
                         <div id="faq5" class="collapse" data-parent=".faq-list">
                             <p>
-                                La suscripción es totalmente gratuita a nuestro sistema y con el tiempo puedes convertirte en colaaborador de nuestro equipo de profesionales en los ESports.
+                                La suscripción es totalmente gratuita a nuestro sistema, y con el tiempo puedes convertirte en colaaborador de nuestro equipo de profesionales en los ESports
                             </p>
                         </div>
                     </li>
@@ -531,7 +510,7 @@
                 <div class="row footer-newsletter justify-content-center">
                     <div class="col-lg-6">
                         <form action="" method="post">
-                            <input type="email" name="email" placeholder="Envianos tu correo"><input type="submit" value="Suscribete">
+                            <input type="email" name="email" placeholder="Enter your Email"><input type="submit" value="Subscribe">
                         </form>
                     </div>
                 </div>
